--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
       <!--
 			=====================================================				Reserved [PS]			=====================================================			-->
 
-			=====================================================				Contact Section			=====================================================			-->
+			<!--=====================================================				Contact Section			=====================================================			-->
       <div id="contact-section">
         <div class="container">
           <div class="clear-fix contact-address-content">
@@ -895,8 +895,7 @@
                   </li>
                 </ul>
               </div>
-              ===================================================== Footer
-              ===================================================== --&gt;
+             <!-- ===================================================== Footer ====================================================--!>>
               <footer>
                 <div class="container"> <a href="index.html" class="logo"><img
 
