--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
                 <li class="active"><a href="#home">HOME</a></li>
                 <li><a href="#about-us">ABOUT</a></li>
                 <li><a href="#service-section">SERVICES</a></li>
-                <li><a href="#project-section">PORTFOLIO</a></li>
+                <li><a href="#project-section">ENDORSEMENTS</a></li>
                 <li><a href="#team-section">TEAM</a></li>
                 <li><a href="#skill-section">Skill</a></li>
                 <li><a href="#our-client">CLIENTS</a></li>
-                <li><a href="#pricing-section">Pricing</a></li>
                 <li class="dropdown-holder"><a href="#blog-section">BLOG</a>
                   <ul class="sub-menu">
                     <li><a href="blog-details.html" class="tran3s">Blog Details</a></li>
@@ -880,16 +879,7 @@
               <!-- Bootstrap JS -->
               <script type="text/javascript" src="vendor/bootstrap/bootstrap.min.js"></script>
               <!-- Vendor js _________ -->
-              <!-- revolution -->
-              <script src="vendor/revolution/jquery.themepunch.tools.min.js"></script>
-              <script src="vendor/revolution/jquery.themepunch.revolution.min.js"></script>
-              <script type="text/javascript" src="vendor/revolution/revolution.extension.slideanims.min.js"></script>
-              <script type="text/javascript" src="vendor/revolution/revolution.extension.layeranimation.min.js"></script>
-              <script type="text/javascript" src="vendor/revolution/revolution.extension.navigation.min.js"></script>
-              <script type="text/javascript" src="vendor/revolution/revolution.extension.kenburn.min.js"></script>
-              <script type="text/javascript" src="vendor/revolution/revolution.extension.actions.min.js"></script>
-              <script type="text/javascript" src="vendor/revolution/revolution.extension.video.min.js"></script>
-   
+            
               <!-- mixitUp -->
               <script type="text/javascript" src="vendor/jquery.mixitup.min.js"></script>
               <!-- Progress Bar js -->
