--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
         </div>
         <!-- END REVOLUTION SLIDER --> </div>
       <!--  /#banner -->
-      <!--
-			=====================================================				About us Section			=====================================================			-->
+      <!--=====================================================				About Section			=====================================================			-->
       <section id="about-us">
         <div class="container">
           <div class="theme-title">
@@ -211,7 +210,7 @@
         <!-- /.container --> </section>
       <!-- /#about-us -->
       <!--
-			=====================================================				Service Section			=====================================================			-->
+			=====================================================				It's Time To Grow Our Party			=====================================================			-->
       <div id="service-section">
         <div class="container">
           <div class="theme-title">
@@ -227,7 +226,7 @@
               <div class="single-service-content">
                 <div class="icon-heading tran3s">
                   <div class="icon tran3s"><i class="fa fa-paint-brush" aria-hidden="true"></i></div>
-                  <h6><a href="#" class="tran3s">Web Design</a></h6>
+                  <h6><a href="#" class="tran3s">Engage</a></h6>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur scing elit, sed do
                   eiusmod, tempor incididunt labore et dolore magna aliqua. Ut
@@ -240,7 +239,7 @@
               <div class="single-service-content">
                 <div class="icon-heading tran3s">
                   <div class="icon tran3s"><i class="fa fa-camera" aria-hidden="true"></i></div>
-                  <h6><a href="#" class="tran3s">Photography</a></h6>
+                  <h6><a href="#" class="tran3s">Empower</a></h6>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur scing elit, sed do
                   eiusmod, tempor incididunt labore et dolore magna aliqua. Ut
@@ -253,7 +252,7 @@
               <div class="single-service-content">
                 <div class="icon-heading tran3s">
                   <div class="icon tran3s"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></div>
-                  <h6><a href="#" class="tran3s">Web Development</a></h6>
+                  <h6><a href="#" class="tran3s">Teach</a></h6>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur scing elit, sed do
                   eiusmod, tempor incididunt labore et dolore magna aliqua. Ut
