--- a/index.html
+++ b/index.html
@@ -461,15 +461,12 @@
         <!-- /.container --> </div>
       <!-- /#project-section -->
 
-      <!--=====================================================				Blog Section			=====================================================			-->
+      <!--=====================================================				Blog Section			=====================================================-->
       <div id="blog-section">
         <div class="container">
           <div class="theme-title">
-            <h2>OUR LATEST Blog</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type.</p>
+            <h2>NEWS</h2>
+            <p>I hope you'll check back as I travel the state and talk about my vision to Grow Our Party. I look forward to talking to you and learning about your ideas as we approach the convention!</p>
           </div>
           <!-- /.theme-title -->
           <div class="clear-fix">
