--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!-- For Resposive Device -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maryn Setsuda for Youth Vice Chair</title>
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="56x56" href="images/fav-icon/icon.png">
+    <!-- Reserved for [future] Favicon -->
+ 
     <!-- Main style sheet -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- responsive style sheet -->
@@ -541,8 +541,7 @@
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
               <div class="left-side">
                 <h2>Contact Info</h2>
-                <p> I want to hear from you! Please feel free to reach out
-                  through the methods listed below!</p>
+                <p> I want to hear from you! Please feel free to reach out anytime!</p>
                 <ul>
                   <li>
                     <div class="icon tran3s round-border p-color-bg"><i class="fa fa-phone"
