--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             </li>
           </ul>
           <p> Paid for by Maryn Setsuda for Youth Vice Chair. <br>
-            Copyright © 2018. All rights reserved. | Template by <a href="https://colorlib.com"
+            Copyright © 2018. All rights reserved. Design by <a href="https://colorlib.com"
 
               target="_blank">Colorlib</a></p>
         </div>
