--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                   data-start="2000" data-splitin="none" data-splitout="none" data-responsive_offset="on"
 
                   style="z-index: 6; white-space: nowrap;">
-                  <p>I’m running because I’ve seen how powerful and passionate
+                  <bp>I’m running because I’ve seen how powerful and passionate
                     the Republican youth can be when they are engaged.<br>
                     I believe if we provide the opportunity for them to be
                     involved in meaningful ways, we can Grow Our Party and
-                    better our state.</p>
+                    better our state.</bp>
                 </div>
               </li>
             </ul>
