--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       </div>
       <!--===================================================== Footer ====================================================-->
       <footer>
-        <div class="container"> <a href="index.html" class="logo"><img src="images/logo/logo.png"
+        <div class="container"> <a href="index.html" class="logo"><img src="images/logo/logo_white.png"
 
               alt="Logo"></a>
           <ul>
