--- a/crose/index.html
+++ b/crose/index.html
@@ -35,7 +35,7 @@
                         aria-hidden="true"></i></a> </div>
                 </div>
                 <!-- Top Header Meta -->
-                <div class="top-header-meta"> <a href="mailto:maryn@marynsetsuda.com"
+                <div class="top-header-meta"> <a href="mailto:info.deercreative@gmail.com"
 
                     class="email-address"><i class="fa fa-envelope" aria-hidden="true"></i>
                     <span>maryn@marynsetsuda.com</span></a> <a href="#" class="phone"><i
@@ -180,6 +180,26 @@
           </div>
         </div>
       </div>
+      <!-- Single Hero Slide -->
+      <div class="single-hero-slide bg-img bg-overlay d-flex align-items-center justify-content-center"
+
+        style="background-image: url(img/bg-img/2.jpg);">
+        <!-- Post Content -->
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <div class="hero-slides-content">
+                <h2 data-animation="fadeInUp" data-delay="100ms">Making Jesus
+                  Known</h2>
+                <p data-animation="fadeInUp" data-delay="300ms">Learn about our
+                  mission, our beliefs, and the hope we have in Jesus.</p>
+                <a href="#" class="btn crose-btn" data-animation="fadeInUp" data-delay="500ms">Contact
+                  Us</a> </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- ##### Hero Area End ##### -->
     <!-- ##### About Area Start ##### -->
     <section class="about-area section-padding-100-0">
@@ -188,41 +208,19 @@
           <!-- Section Heading -->
           <div class="col-12">
             <div class="section-heading">
-              <h2>About Me</h2>
-              <p>I was adopted when I was two years old while my mom and brother
-              were on a mission trip and realized that God was calling them to
-              bring me into their family. I grew up in Farmington Hills but also
-              lived in the Grand Rapids area for a few years. I’ve been blessed
-              to attend a variety of schools- Christian, public, Spanish
-              immersion, and early college. I feel that the different
-              environments have given me a unique perspective on many aspects of
-              life. <br>
-              <br>
-              I currently attend Oakland Early College where I take both high
-              school and college classes, and am on track to earn an Associate’s
-              Degree upon graduation. I plan to stay in Michigan for my
-              four-year major in Political Science, with a minor in
-              Business/Marketing/Economics. <br>
-              <br>
-              In the past year I’ve been honored to be a part of Student
-              Statesmanship Institute, Michigan Excellence in Public Service
-              Series, the Schuette for Governor campaign, and the Michigan
-              Republican Party’s Election Day Operations program. <br>
-              <br>
-              I’m passionate about helping others and being a part of the change
-              that I want to see in the world, which is why I’ve gone on
-              multiple international mission trips, volunteered with children
-              who have special needs, and pushed to engage other youth in
-              politics.</p>
+              <h2>Welcome To Church</h2>
+              <p>A church isn't a building—it's the people. We meet in locations
+                around the United States and globally at Life.Church Online. No
+                matter where you join us.</p>
             </div>
           </div>
         </div>
         <div class="row about-content justify-content-center">
           <!-- Single About Us Content -->
           <div class="col-12 col-md-6 col-lg-4">
-            <div class="about-us-content mb-100"> 
+            <div class="about-us-content mb-100"> <img src="img/bg-img/3.jpg" alt="">
               <div class="about-text">
-                <h4>My Experience</h4>
+                <h4>Our Church</h4>
                 <p>There are many variations of passages of Lorem Ipsum
                   available, but the majority have suffered alteration in some
                   form.</p>
